updated spark configuration

--- a/conf/spark-defaults.conf
+++ b/conf/spark-defaults.conf
@@ -8,3 +8,5 @@ spark.hadoop.fs.s3a.impl               org.apache.hadoop.fs.s3a.S3AFileSystem
 spark.hadoop.fs.s3a.aws.credentials.provider    org.apache.hadoop.fs.s3a.SimpleAWSCredentialsProvider
 spark.sql.extensions                    io.delta.sql.DeltaSparkSessionExtension
 spark.sql.catalog.spark_catalog         org.apache.spark.sql.delta.catalog.DeltaCatalog
+spark.pyspark.python                    /venv/bin/python
+spark.pyspark.driver.python             /venv/bin/python
