--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,10 +19,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install Databricks CLI
-        run: pip install databricks-cli==0.244.0
+        run: pip install databricks-connect==15.4.4 wheel
 
       - name: Show Databricks CLI version
         run: databricks -v
